--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "echarts": "^5.2.2",
+    "emailjs-com": "^3.2.0",
     "quasar": "^2.0.0",
     "vue": "^3.0.0",
     "vue-echarts": "^6.0.0"
